test/invalid/baseline/async-sequence-two-params.txt
Syntax error at line 3 in async-sequence-two-params.webidl, since `interface AsyncSequence`:
  async_sequence<long, short> foo(
                     ^ Missing closing bracket after async_sequence
